[tool.poetry]
name = "pagerduty"
version = "0.1.0"
description = "PagerDuty client API for the interview."
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/pagerduty/"
documentation = "https://91nunocosta.github.io/pagerduty/pagerduty.html"

[tool.poetry.scripts]
pagerduty = "pagerduty.cli:pagerduty"
[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"
bandit = "^1.7.4"
flake8 = "^6.0.0"
types-requests = "^2.28.11.15"
darglint = "^1.8.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^12.3.1"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
python-semantic-release = "^7.33.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pagerduty/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
build_command = "pip install poetry && poetry build"
upload_to_release = true

upload_to_repository = false
repository_url = ""
